Boots ES using --patch-module of java.base